# demlabs

./: CMakeLists.txt
res/qml/: main.qml
src/: .backend.cpp.swp  .backend.h.swp  backend.cpp  backend.h  main.cpp
